--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(conveyor_basic_test CXX)
+
+enable_testing()
 
 # Add a test executable
 add_executable(conveyor_basic_test conveyor_test.cpp)
@@ -14,10 +15,4 @@ target_include_directories(conveyor_basic_test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../include
 )
 
-# Add a test executable for the toy model
-add_executable(toy_model_test toy_model.cpp)
-
-# Specify include directories for the toy model test
-target_include_directories(toy_model_test PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../include
-)
+add_test(NAME ConveyorBasicTest COMMAND conveyor_basic_test)
