feat: Add gtest stress test and fix Append-Read bug
- Integrated Google Test framework for more robust testing.

- Added a new stress test suite (conveyor_stress_test.cpp) to test for deadlocks, race conditions, and other complex scenarios.

- Fixed the Append-Read bug in conveyor_read's snooping logic to correctly handle reads of newly appended data.

- Changed storage_handle_t to oid* to prevent pointer truncation issues, which resolved deadlocks in the stress test.

- Updated CMake files to include and link gtest.

- Updated journal with the latest changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,11 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/conveyorConfig.cmake
 
 
 # Add the test subdirectory
+
+# Enable testing
+enable_testing()
+
+# Add googletest
+add_subdirectory(external/googletest)
+
 add_subdirectory(test)
