docs(README): Update with performance, architecture, and benchmark results
- Updated README.md to reflect the new high-level architecture, enhanced features, and comprehensive performance benchmark results.

- The README.md now includes detailed explanations of the concurrency model, performance optimizations (write ring buffer, optimized snoop, reduced lock contention), and the significant speedup achieved in burst write scenarios.

- Modified enchmark/conveyor_benchmark.cpp to accurately measure enqueue and flush times, demonstrating libconveyor's latency-hiding capabilities.

- Finalized conveyorConfig.cmake.in for easy library consumption.

- Added performance_improvements.txt to .gitignore.

--- a/conveyorConfig.cmake.in
+++ b/conveyorConfig.cmake.in
@@ -1,4 +1,5 @@
 @PACKAGE_INIT@
 
-include ( "${CMAKE_CURRENT_INSTALL_DIR}/conveyorTargets.cmake" )
-check_required_components ( conveyor )
+include("${CMAKE_CURRENT_LIST_DIR}/conveyorTargets.cmake")
+
+check_required_components(libconveyor)
