--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -9,3 +9,13 @@ target_link_libraries(conveyor_benchmark PRIVATE
 target_include_directories(conveyor_benchmark PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../include
 )
+
+add_executable(conveyor_read_benchmark conveyor_read_benchmark.cpp)
+
+target_link_libraries(conveyor_read_benchmark PRIVATE
+    conveyor
+)
+
+target_include_directories(conveyor_read_benchmark PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/../include
+)
