--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,23 +18,23 @@ target_include_directories(conveyor_basic_test PRIVATE
 add_test(NAME ConveyorBasicTest COMMAND conveyor_basic_test)
 
 # Add the C++23 modern API test executable
-add_executable(conveyor_modern_test conveyor_modern_test.cpp)
+# add_executable(conveyor_modern_test conveyor_modern_test.cpp)
 
-# Link the C++23 modern API test executable with libconveyor, gtest, gmock
-target_link_libraries(conveyor_modern_test PRIVATE
-    conveyor
-    gtest
-    gmock
-    gtest_main
-)
+# # Link the C++23 modern API test executable with libconveyor, gtest, gmock
+# target_link_libraries(conveyor_modern_test PRIVATE
+#     conveyor
+#     gtest
+#     gmock
+#     gtest_main
+# )
 
-# Specify include directories for the C++23 modern API test
-target_include_directories(conveyor_modern_test PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../include
-    ${CMAKE_CURRENT_SOURCE_DIR}/../external/expected/include
-)
+# # Specify include directories for the C++23 modern API test
+# target_include_directories(conveyor_modern_test PRIVATE
+#     ${CMAKE_CURRENT_SOURCE_DIR}/../include
+#     ${CMAKE_CURRENT_SOURCE_DIR}/../external/expected/include
+# )
 
-add_test(NAME ConveyorModernTest COMMAND conveyor_modern_test)
+# add_test(NAME ConveyorModernTest COMMAND conveyor_modern_test)
 
 # Add the stress test executable
 add_executable(conveyor_stress_test conveyor_stress_test.cpp)
